# Building_Knowledge_Extraction_Pipeline_with_Docling

./: .gitignore  1_extraction.ipynb  1_extraction.py  2_chunking.py  3_embedding.py  README.md  process_multiple_pdfs.py  pyproject.toml
utils/: sitemap.py  tokenizer.py
