[project]
name = "building-knowledge-extraction-with-doling"
version = "0.1.0"
description = "Aqui vamos a criar um pipeline de extração de dados com Docling"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.26.0",
    "ipykernel>=6.29.5",
    "lancedb>=0.21.1",
    "openai>=1.66.3",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "streamlit>=1.43.2",
    "tiktoken>=0.9.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
