[project]
name = "building-knowledge-extraction-with-doling"
version = "0.1.0"
description = "Aqui vamos a criar um pipeline de extração de dados com Docling"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling==2.61.2",
    "easyocr>=1.7.2",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "lancedb>=0.21.1",
    "onnxruntime==1.23.2",
    "openai>=1.66.3",
    "opencv-python==4.12.0.88",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "streamlit==1.43.2",
    "tiktoken>=0.9.0",
    "torch>=2.9.1",
    "transformers>=4.57.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
